commit on master

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header') %>
 
 <div class="container">
-    <div class="row">
-        <div class="col-3 mt-5">
+    <div class="row text-center">
+        <div class="col-lg-3 d-md-block mt-5">
             <h1>About us</h1>
         </div>
-        <div class="col-9 aboutparagraph">
+        <div class="col-lg-9 d-md-block aboutparagraph">
             <p>E-Learn is one of the world’s <br>
                 leading certification training providers. <br>
                 We partner with companies and individuals <br>
