--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <section class="homesection">
     <div class="container">
         <div class="row heading">
-            <div class="col-6">
+            <div class="col-md-6">
                 <h1>Our courses are on sale.</h1>
                 <br>
                 <h2>Learn From Basic <br>
@@ -14,7 +14,7 @@
                     <a class="btn btn-lg homebtn" href="/courses">Enroll Now</a>
                     <a class="btn btn-lg homebtn" href="/register">Sign up</a>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 d-none d-md-block ">
                 <img id="homeimg" src="/assest/Home-img.jpg" alt="home-img">
             </div>
         </div>
