--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>E-learn</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -30,8 +31,10 @@
     </ul>
   </div>
   <% if (!currentUser){ %>
-    <a class="btn btn-md m-1" style="background-color: #251F44; color: #F5F5F5;" href="/login">Login</a>
-    <a class="btn btn-md" style="background-color: #519872; color: #F5F5F5;" href="/register">Register</a>
+    <div class="d-flex">
+      <a class="btn btn-md m-1" style="background-color: #251F44; color: #F5F5F5;" href="/login">Login</a>
+      <a class="btn btn-md m-1" style="background-color: #519872; color: #F5F5F5;" href="/register">Register</a>
+    </div>
   <% } else { %>
           
           <div class="dropdown">
