--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -3,6 +3,7 @@
 <div class="text-center">
 
     <% courses.forEach(function(course){ %>
+        
         <div class="row" style="display: inline-flex;">
             <div class="col-4">
                 <div class="card m-3" style="width: 18rem;">
@@ -11,10 +12,10 @@
                     <div class="body">
                         <div class="row">
                             <div class="col text-right">
-                                <a href="#" class="btn btn-sm btn-block btn-info">More Info</a>
+                                <a href="/courses/<%= course._id %>" class="btn btn-sm btn-block btn-info">More Info</a>
                             </div>
                             <div class="col text-left ">
-                                <a href="#" class="btn btn-sm btn-block btn-success">enroll now</a>
+                                <a href="#" class="btn btn-sm btn-block btn-success">Enroll now</a>
                             </div>
                         </div>
                     </div>
