--- a/views/newCourse.ejs
+++ b/views/newCourse.ejs
@@ -12,10 +12,28 @@
           <div class="form-group">
             <label>Course Image URL</label>
             <input class="form-control" type="url" name="image" id="img" required>
-            <!-- <input type="file" name="image" id="img" accept="image/*" class="custom-file-input" required>
-            <label for="img" class="custom-file-label">Choose Image</label> -->
           </div>
-          <input type="submit" value="Submit" class="btn btn-outline-dark btn-block">
+
+          <div class="form-group">
+            <label>Course Info</label>
+            <input class="form-control m-1" type="text" name="tablehead1" placeholder="First heading" >
+            <input class="form-control m-1" type="text" name="tablebody1" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody11" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody12" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody13" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablehead2" placeholder="Second heading" >
+            <input class="form-control m-1" type="text" name="tablebody2" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody21" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody22" placeholder="Content" >
+            <input class="form-control m-1" type="text" name="tablebody23" placeholder="Content" >
+          </div>
+
+          <div class="form-group">
+            <label>Price in Rupees</label>
+            <input class="form-control" type="text" name="price" required>
+          </div>          
+
+          <input type="submit" value="Submit" class="btn btn-outline-dark btn-block mb-5">
         </form>
       </div>
     </div>
