--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,29 +1,33 @@
-<%- include('partials/header') %>
+<%- include('./partials/header') %>
 
 <div class="text-center">
+  <% courses.forEach(function(course){ %>
 
-    <% courses.forEach(function(course){ %>
-        
-        <div class="row" style="display: inline-flex;">
-            <div class="col-4">
-                <div class="card m-3" style="width: 18rem;">
-                    <h2 class="text-center"><%=course.name%></h2>
-                    <img class="card-img" src="<%=course.image%>">
-                    <div class="body">
-                        <div class="row">
-                            <div class="col text-right">
-                                <a href="/courses/<%= course._id %>" class="btn btn-sm btn-block btn-info">More Info</a>
-                            </div>
-                            <div class="col text-left ">
-                                <a href="#" class="btn btn-sm btn-block btn-success">Enroll now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <div class="row" style="display: inline-flex;">
+    <div class="col-4">
+      <div class="card m-3" style="width: 18rem;">
+        <h2 class="text-center"><%=course.name%></h2>
+        <img class="card-img" src="<%=course.image%>" />
+        <div class="body">
+          <div class="row">
+            <div class="col text-right">
+              <a
+                href="/courses/<%= course._id %>"
+                class="btn btn-sm btn-block btn-info"
+                >More Info</a
+              >
             </div>
+            <div class="col text-left">
+              <a href="#" class="btn btn-sm btn-block btn-success"
+                >Enroll now</a
+              >
+            </div>
+          </div>
         </div>
-    <%  }); %>
-<div class="mb-5"></div>
-
+      </div>
+    </div>
+  </div>
+  <% }); %>
+  <div class="mb-5"></div>
 </div>
-<%- include('partials/footer') %>
+<%- include('./partials/footer') %>
