--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,25 @@
-<%- include('partials/header') %>
-
+<%- include('./partials/header') %>
 
 <section class="homesection">
-    <div class="container">
-        <div class="row heading">
-            <div class="col-md-6">
-                <h1>Our courses are on sale.</h1>
-                <br>
-                <h2>Learn From Basic <br>
-                    to<br>
-                    Advanced !</h2>
-                    <br>
-                    <a class="btn btn-lg homebtn" href="/courses">Enroll Now</a>
-                    <a class="btn btn-lg homebtn" href="/register">Sign up</a>
-            </div>
-            <div class="col-md-6 d-none d-md-block ">
-                <img id="homeimg" src="/assest/Home-img.jpg" alt="home-img">
-            </div>
-        </div>
+  <div class="container">
+    <div class="row heading">
+      <div class="col-md-6">
+        <h1>Our courses are on sale.</h1>
+        <br />
+        <h2>
+          Learn From Basic <br />
+          to<br />
+          Advanced !
+        </h2>
+        <br />
+        <a class="btn btn-lg homebtn" href="/courses">Enroll Now</a>
+        <a class="btn btn-lg homebtn" href="/register">Sign up</a>
+      </div>
+      <div class="col-md-6 d-none d-md-block">
+        <img id="homeimg" src="/assest/Home-img.jpg" alt="home-img" />
+      </div>
     </div>
-
+  </div>
 </section>
 
-
-<%- include('partials/footer') %>
+<%- include('./partials/footer') %>
