--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,140 +1,134 @@
 body {
-    font-family: 'lato', sans-serif;
+  font-family: "lato", sans-serif;
 }
 
 h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-    background-color: #FFE0F7;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+  background-color: #ffe0f7;
 }
 
 .container {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .homesection {
-    margin-top: 2.5rem;
-    background-color: #251F44;
-    padding-top: 5%;
-    padding-bottom: 5%;
+  margin-top: 2.5rem;
+  background-color: #251f44;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 #homeimg {
-    width: 100%;
-    mix-blend-mode: lighten;
-    border: 5px solid;
-    border-radius: 20px;
+  width: 100%;
+  mix-blend-mode: lighten;
+  border: 5px solid;
+  border-radius: 20px;
 }
 
 .heading {
-    text-align: center;
-    color: #D3DBFF;
+  text-align: center;
+  color: #d3dbff;
 }
 
 .navbarlink {
-    color: #251F44;
-    font-size: 1rem;
+  color: #251f44;
+  font-size: 1rem;
 }
-.navbarlink:hover{
-    background-color: #251F44 ;
-    color: whitesmoke;
+.navbarlink:hover {
+  background-color: #251f44;
+  color: whitesmoke;
 }
 
-.homebtn{
-    background-color: #FE91CA;
-    color: #FFFFDD;
-    margin: 2%;
-    text-align: center;
-    padding: 10px 20px 10px 20px ;
-    letter-spacing: 2px;
+.homebtn {
+  background-color: #fe91ca;
+  color: #ffffdd;
+  margin: 2%;
+  text-align: center;
+  padding: 10px 20px 10px 20px;
+  letter-spacing: 2px;
 }
 
 .aboutparagraph {
-    text-align: center;
-    font-size: 25px;
-    letter-spacing: 4px;
-    padding-top: 15%;
+  text-align: center;
+  font-size: 25px;
+  letter-spacing: 4px;
+  padding-top: 15%;
 }
 
 .dropbtn {
-    color: #251F44;
-    font-style: italic;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    font-size: 12px;
-    border: none;
-    border-radius: 0.5rem;
-  }
-  
+  color: #251f44;
+  font-style: italic;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  font-size: 12px;
+  border: none;
+  border-radius: 0.5rem;
+}
+
 .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
+  position: relative;
+  display: inline-block;
+}
+
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
-
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 @media only screen and (max-width: 990px) {
-    .aboutparagraph {
-        font-size: 25px;
-        padding-top: 0%;
-    }
+  .aboutparagraph {
+    font-size: 25px;
+    padding-top: 0%;
   }
+}
 
 @media only screen and (max-width: 300px) {
-    .heading {
-        font-size: 30%;
-    }
-    h1 {
-        font-size: 2rem;
-    }
-    .aboutparagraph {
-        font-size: 15px;
-    }
+  .heading {
+    font-size: 30%;
   }
-
-
-
-
-
-
+  h1 {
+    font-size: 2rem;
+  }
+  .aboutparagraph {
+    font-size: 15px;
+  }
+}
 
 .footer {
-    left: 0;
-    font-family: 'Lato', sans-serif;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-    background-color: #D3DBFF;
+  left: 0;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #d3dbff;
 }
 
 .footer p {
-	margin-top: 20px;
+  margin-top: 20px;
 }
-
