--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,24 +1,21 @@
-<%- include('partials/header') %>
+<%- include('./partials/header') %>
 
 <div class="container">
-    <div class="row text-center">
-        <div class="col-lg-3 d-md-block mt-5">
-            <h1>About us</h1>
-        </div>
-        <div class="col-lg-9 d-md-block aboutparagraph">
-            <p>E-Learn is one of the world’s <br>
-                leading certification training providers. <br>
-                We partner with companies and individuals <br>
-                to address their unique needs,providing training <br>
-                and coaching that helps working professionals achieve <br>
-                their career goals.</p>
-        </div>
+  <div class="row text-center">
+    <div class="col-lg-3 d-md-block mt-5">
+      <h1>About us</h1>
     </div>
-
+    <div class="col-lg-9 d-md-block aboutparagraph">
+      <p>
+        E-Learn is one of the world’s <br />
+        leading certification training providers. <br />
+        We partner with companies and individuals <br />
+        to address their unique needs,providing training <br />
+        and coaching that helps working professionals achieve <br />
+        their career goals.
+      </p>
+    </div>
+  </div>
 </div>
 
-
-
-
-
-<%- include('partials/footer') %>
+<%- include('./partials/footer') %>
