--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,4 @@
-<%- include('partials/header') %>
-
+<%- include('./partials/header') %>
 
 <div class="container">
   <div class="row">
@@ -7,16 +6,20 @@
       <form class="text-center p-5" action="/admin" method="post">
         <div class="form-group">
           <label>Enter Admin Secret Code :</label>
-          <input class="form-control" type="text" name="verify" placeholder="Admin Verification" required>
+          <input
+            class="form-control"
+            type="text"
+            name="verify"
+            placeholder="Admin Verification"
+            required
+          />
         </div>
-        <button class="btn btn-outline-dark btn-block" type="submit">Verify</button>
+        <button class="btn btn-outline-dark btn-block" type="submit">
+          Verify
+        </button>
       </form>
     </div>
   </div>
 
-
-
-
-
-
-<%- include('partials/footer') %>
+  <%- include('./partials/footer') %>
+</div>
