--- a/views/courseInfo.ejs
+++ b/views/courseInfo.ejs
@@ -1,5 +1,4 @@
-<%- include('partials/header') %>
-
+<%- include('./partials/header') %>
 
 <div class="container p-5">
     <div class="row">
@@ -38,7 +37,6 @@
             </div>
 
 
-
         </div>
         <div class="col-lg-6">
             <div class="card text-center" style="width: 100%;">
@@ -56,4 +54,4 @@
     </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('./partials/footer') %>
