--- a/views/newCourse.ejs
+++ b/views/newCourse.ejs
@@ -1,45 +1,102 @@
-<%- include('partials/header') %>
+<%- include('./partials/header') %>
 
 <div class="container">
-    <div class="row">
-      <div class="col-md-6 m-auto">
-        <h1 class="text-center display-4 my-4">Make New Course</h1>
-        <form action="/courses" method="POST">
-          <div class="form-group">
-            <label>Course name</label>
-            <input class="form-control" type="text" name="name" required>
-          </div>
-          <div class="form-group">
-            <label>Course Image URL</label>
-            <input class="form-control" type="url" name="image" id="img" required>
-          </div>
+  <div class="row">
+    <div class="col-md-6 m-auto">
+      <h1 class="text-center display-4 my-4">Make New Course</h1>
+      <form action="/courses" method="POST">
+        <div class="form-group">
+          <label>Course name</label>
+          <input class="form-control" type="text" name="name" required />
+        </div>
+        <div class="form-group">
+          <label>Course Image URL</label>
+          <input
+            class="form-control"
+            type="url"
+            name="image"
+            id="img"
+            required
+          />
+        </div>
 
-          <div class="form-group">
-            <label>Course Info</label>
-            <input class="form-control m-1" type="text" name="tablehead1" placeholder="First heading" >
-            <input class="form-control m-1" type="text" name="tablebody1" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody11" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody12" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody13" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablehead2" placeholder="Second heading" >
-            <input class="form-control m-1" type="text" name="tablebody2" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody21" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody22" placeholder="Content" >
-            <input class="form-control m-1" type="text" name="tablebody23" placeholder="Content" >
-          </div>
+        <div class="form-group">
+          <label>Course Info</label>
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablehead1"
+            placeholder="First heading"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody1"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody11"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody12"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody13"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablehead2"
+            placeholder="Second heading"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody2"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody21"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody22"
+            placeholder="Content"
+          />
+          <input
+            class="form-control m-1"
+            type="text"
+            name="tablebody23"
+            placeholder="Content"
+          />
+        </div>
 
-          <div class="form-group">
-            <label>Price in Rupees</label>
-            <input class="form-control" type="text" name="price" required>
-          </div>          
+        <div class="form-group">
+          <label>Price in Rupees</label>
+          <input class="form-control" type="text" name="price" required />
+        </div>
 
-          <input type="submit" value="Submit" class="btn btn-outline-dark btn-block mb-5">
-        </form>
-      </div>
+        <input
+          type="submit"
+          value="Submit"
+          class="btn btn-outline-dark btn-block mb-5"
+        />
+      </form>
     </div>
   </div>
+</div>
 
-
-
-
-<%- include('partials/footer') %>
+<%- include('./partials/footer') %>
