--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,13 +23,13 @@
     <link rel="stylesheet" href="/css/bootstrap-social.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <section class="container">
-    <nav class="navbar navbar-expand-md border border-dark rounded-bottom">
-      <a class="navbar-brand" style="color: #251f44;" href="/home"
+  <section>
+    <nav class="navbar navbar-expand-md">
+      <a class="navbar-brand mb-2" style="color: #251f44; font-size: 2rem;" href="/home"
         ><strong>E-Learn</strong></a
       >
       <button
-        class="navbar-toggler navbar-dark"
+        class="navbar-toggler navbar-dark ml-auto"
         style="background-color: #251f44;"
         type="button"
         data-toggle="collapse"
@@ -41,7 +41,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto" style="font-style: italic;">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link navbarlink" href="/courses">Courses</a>
           </li>
