--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,11 +9,8 @@ h1 {
 .navbar {
   padding-top: 15px;
   padding-bottom: 15px;
-  border: 0;
-  border-radius: 0;
-  margin-bottom: 0;
   font-size: 12px;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   background-color: #ffe0f7;
 }
 
@@ -68,8 +65,9 @@ h1 {
 .dropbtn {
   color: #251f44;
   font-style: italic;
+  margin-top: 0.5em ;
+  margin-left: 0.5em;
   padding: 0.5rem;
-  margin: 0.5rem;
   font-size: 12px;
   border: none;
   border-radius: 0.5rem;
