--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -76,7 +76,7 @@
         </button>
         <div class="dropdown-content">
           <a href="#">Edit Profile</a>
-          <a href="#">My Courses</a>
+          <a href="/mycourses">My Courses</a>
         </div>
       </div>
       <div>
