--- a/views/courseInfo.ejs
+++ b/views/courseInfo.ejs
@@ -3,9 +3,8 @@
 <div class="container p-5">
   <div class="row">
     <div class="bg-light col-lg-6">
-      <h1 class="text-center"><%=name %></h1>
+      <h2 class="text-center">What you'll learn</h2>
       <div class="m-1">
-        <h3>What you'll learn</h3>
       </div>
       <div class="table-responsive">
         <table class="table table-striped">
@@ -42,6 +41,7 @@
           <img class="card-img-top" src="<%=image %>" alt="" />
         </div>
         <div class="card-body">
+          <h1><%=name %></h1>
           <h4>Price</h4>
           <p>30 Days Money Back Guarantee</p>
           <p>₹ <%= price %></p>
