--- a/views/courseInfo.ejs
+++ b/views/courseInfo.ejs
@@ -10,26 +10,26 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th scope="col"><%= tablehead1 %></th>
-              <th scope="col"><%= tablehead2 %></th>
+              <th scope="col"><%= course.tablehead1 %></th>
+              <th scope="col"><%= course.tablehead2 %></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td scope="row"><%= tablebody1 %></td>
-              <td><%= tablebody2 %></td>
+              <td scope="row"><%= course.tablebody1 %></td>
+              <td><%= course.tablebody2 %></td>
             </tr>
             <tr>
-              <td scope="row"><%= tablebody11 %></td>
-              <td><%= tablebody21 %></td>
+              <td scope="row"><%= course.tablebody11 %></td>
+              <td><%= course.tablebody21 %></td>
             </tr>
             <tr>
-              <td scope="row"><%= tablebody12 %></td>
-              <td><%= tablebody22 %></td>
+              <td scope="row"><%= course.tablebody12 %></td>
+              <td><%= course.tablebody22 %></td>
             </tr>
             <tr>
-              <td scope="row"><%= tablebody13 %></td>
-              <td><%= tablebody23 %></td>
+              <td scope="row"><%= course.tablebody13 %></td>
+              <td><%= course.tablebody23 %></td>
             </tr>
           </tbody>
         </table>
@@ -38,15 +38,38 @@
     <div class="col-lg-6">
       <div class="card text-center" style="width: 100%;">
         <div class="card-header">
-          <img class="card-img-top" src="<%=image %>" alt="" />
+          <img class="card-img-top" src="<%=course.image %>" alt="" />
         </div>
         <div class="card-body">
-          <h1><%=name %></h1>
+          <h1><%=course.name %></h1>
           <h4>Price</h4>
           <p>30 Days Money Back Guarantee</p>
-          <p>₹ <%= price %></p>
+          <p>₹ <%= course.price %></p>
+          <% if(checkEnrolled){ %>
           <!-- <a class="btn btn-md btn-success" href="#">Enroll Now</a> -->
+          <button type="button" class="btn btn-md btn-dark" data-toggle="modal" data-target="#myModal">
+            Read Now
+          </button>
+          
+
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Course Lecture</h4>
+                </div>
+                <div class="modal-body">
+                  <iframe width="480" height="360" src="<%=course.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% } else { %>
           <button class="btn btn-md btn-success" type="submit">Enroll Now</button>
+          <% } %>
         </form>
         </div>
       </div>
