--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -16,7 +16,7 @@
             />
           </div>
           <button class="btn btn-outline-dark btn-block" type="submit">
-            Verify
+            Update
           </button>
         </form>
       </div>
