Lecture Changes and Dynamic Footer Year

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
 
 </div>
 <footer class="footer fixed-bottom">
-    <p>Copyright 2020</p>
+    <p>Copyright <%= new Date().getFullYear(); %> </p>
 </footer>
 
 
