--- a/views/courseInfo.ejs
+++ b/views/courseInfo.ejs
@@ -58,8 +58,8 @@
                 <div class="modal-header">
                 <h4 class="modal-title" id="myModalLabel">Course Lecture</h4>
                 </div>
-                <div class="modal-body">
-                  <iframe width="480" height="360" src="<%=course.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="modal-body embed-responsive embed-responsive-4by3">
+                  <iframe class="embed-responsive-item" src="<%=course.video%>"" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
