--- a/views/mycourses.ejs
+++ b/views/mycourses.ejs
@@ -8,27 +8,7 @@
                 <img class="card-img" src="<%= mycourse.image %>"/>
                 <h2 class="text-center"><%= mycourse.name %></h2>
                 <div class="body m-1">
-
-                  <button type="button" class="btn btn-sm btn-block btn-dark" data-toggle="modal" data-target="#myModal">
-                    Read Now 
-                  </button>
-                  
-
-                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Course Lecture</h4>
-                        </div>
-                        <div class="modal-body">
-                          <iframe width="480" height="360" src="<%=mycourse.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <a href="/mycourses/<%=mycourse._id%>" class="btn btn-sm btn-dark btn-block">Read Now</a>
                 </div>
               </div>
             </div>
